# libg15render

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.rst  configure  configure.ac  configure.in  font_6x4.c  font_7x5.c  font_8x8.c  libg15render.3  libg15render.h  pixel.c  screen.c  text.c
arch/: .SRCINFO  PKGBUILD
config/: config.guess  config.sub
debian/: changelog
dists/debian/: changelog  rules
dists/freebsd/: Makefile
dists/venom/: spkgbuild
dists/void/: template
